--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./fontawesome-free-5.7.2-web/css/all.css">
     <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="stylesheet" href="./dist/css/lightbox.css">
 </head>
 
 <body>
@@ -31,14 +32,14 @@
                     <a class="nav-link js-scroll-trigger" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#news">News</a>
+                    <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#serves">Serves</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
@@ -46,26 +47,28 @@
     <section id="home">
         <div class="container">
             <div class="row">
-                <!-- <div class="txt-bg">
-                    <h2><i class="fas fa-paw"></i>HOME</h2>
-                    <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero molestias porro sed ipsa nemo similique
-                        nobis magnam neque. Exercitationem totam ipsam, quod culpa minima hic nam mollitia magni reiciendis
-                        id placeat dolorum. Quo mollitia et recusandae dolor sapiente laboriosam. Perspiciatis eveniet voluptatibus
-                        perferendis tempore pariatur minima expedita reiciendis excepturi quam cum, aperiam ea, a aliquam
-                        quibusdam id praesentium? Blanditiis tempore, sed iure provident molestiae consectetur cupiditate
-                        veniam quos. Modi, nemo aliquam? Cupiditate repellendus possimus labore asperiores nostrum recusandae,
-                        dolorem sunt, molestiae, sed fugit at maxime ad quis. Odit itaque cupiditate, libero cumque totam
-                        corrupti est repudiandae reprehenderit iste maiores veritatis, et nobis quam facilis similique at
-                        doloremque eius. </P>
+                <div class="txt-bg">
+                    <h2><i class="fas fa-paw"></i>是甜點師/平面設計師/攝影師<i class="fas fa-paw"></i></h2>
+                    <h6>「每一個不曾起舞的日子，都是對生命的辜負。」-尼采</h6>
+                    <div class="nav">
+                        <ul>
+                            <li><a href="https://drive.google.com/file/d/1K0_OfzJwsBvohFHq9j1J6KJzJdViswJg/view?usp=drive_link">履歷表</a></li>
+                            <li><a href="https://www.instagram.com/chun._/">個人IG</a></li>
+                            <li><a href="https://drive.google.com/file/d/1ySioJA-F3_O9EeWdTp64BkIHHY9kF2P5/view?usp=drive_link">作品集</a></li>
+                            <li><a href="https://drive.google.com/drive/folders/10-4jqNkS7QNxoiZ77-DQdbP12aLybfbd?usp=drive_link">攝影作品</a></li>
+                            <li><a href="https://docs.google.com/document/d/1-xWOtTcm7dc-WF-EEoBTx0CNc6U_wfC7SbeXj_e7i8k/edit?usp=drive_link">行銷企劃書</a></li>
+                            <li><a href="https://store.line.me/stickershop/product/26277175/zh-Hant?utm_source=gnsh_stickerDetail">個人LINE貼圖</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div> -->
+            </div>
     </section>
     </div>
     
     <section id="about">
         <div class="container">
             <div class="row">
-                <div class="txt-bg">
+                <!-- <div class="txt-bg">
                     <h2>ABOUT</h2>
                     <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero molestias porro sed ipsa nemo similique
                         nobis magnam neque. Exercitationem totam ipsam, quod culpa minima hic nam mollitia magni reiciendis
@@ -75,15 +78,15 @@
                         veniam quos. Modi, nemo aliquam? Cupiditate repellendus possimus labore asperiores nostrum recusandae,
                         dolorem sunt, molestiae, sed fugit at maxime ad quis. Odit itaque cupiditate, libero cumque totam
                         corrupti est repudiandae reprehenderit iste maiores veritatis, et nobis quam facilis similique at
-                        doloremque eius. </P>
+                        doloremque eius. </P> -->
                 </div>
             </div>
     </section>
 
-    <section id="news">
+    <section id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="txt-bg">
+                <!-- <div class="txt-bg">
                     <h2>News</h2>
                     <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero molestias porro sed ipsa nemo similique
                         nobis magnam neque. Exercitationem totam ipsam, quod culpa minima hic nam mollitia magni reiciendis
@@ -93,13 +96,75 @@
                         veniam quos. Modi, nemo aliquam? Cupiditate repellendus possimus labore asperiores nostrum recusandae,
                         dolorem sunt, molestiae, sed fugit at maxime ad quis. Odit itaque cupiditate, libero cumque totam
                         corrupti est repudiandae reprehenderit iste maiores veritatis, et nobis quam facilis similique at
-                        doloremque eius. </P>
+                        doloremque eius. </P> --> 
+                        <div class="info">
+                            <div class="box">
+                                <a href="images/p00.png" data-lightbox="p00" data-title="國際寵物日 ，全品項買一送一!!">
+                                    <img src="./images/p00.png" alt="">
+                                </a>
+                                <h4>節慶促銷廣告</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p003.jpg" data-lightbox="p003" data-title="寵物店logo設計">
+                                    <img src="./images/p003.jpg" alt="">
+                                </a>
+                                <h4>LOGO設計</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p010.jpg" data-lightbox="p010" data-title="母親節公休一天!!">
+                                    <img src="./images/p010.jpg" alt="">
+                                </a>
+                                <h4>節慶公休公告</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p004.jpg" data-lightbox="p004" data-title="咖啡紙盒包裝展開圖">
+                                    <img src="./images/p004.jpg" alt="">
+                                </a>
+                                <h4>包裝設計</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p006.jpg" data-lightbox="p006" data-title="明信片設計(背面)">
+                                    <img src="./images/p006.jpg" alt="">
+                                </a>
+                                <h4>明信片設計(背面)</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p005.jpg" data-lightbox="p005" data-title="明信片設計(正面)">
+                                    <img src="./images/p005.jpg" alt="">
+                                </a>
+                                <h4>明信片設計(正面)</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p007.jpg" data-lightbox="p007" data-title="貓皇Polygen設計">
+                                    <img src="./images/p007.jpg" alt="">
+                                </a>
+                                <h4>Polygen設計</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p009.jpg" data-lightbox="p009" data-title="烘焙菜單設計(背面)">
+                                    <img src="./images/p009.jpg" alt="">
+                                </a>
+                                <h4>菜單設計(背面)</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p008.jpg" data-lightbox="p008" data-title="烘焙菜單設計(正面)">
+                                    <img src="./images/p008.jpg" alt="">
+                                </a>
+                                <h4>菜單設計(正面)</h4>
+                            </div>
+                            <div class="box">
+                                <a href="images/p001.jpg" data-lightbox="p001" data-title="chun craft 品牌形象廣告">
+                                    <img src="./images/p001.jpg" alt="">
+                                </a>
+                                <h4>品牌形象廣告</h4>
+                            </div>
+                        </div>
                 </div>
             </div>
     </section>
     </div>
 
-    <section id="serves">
+    <!-- <section id="serves">
         <div class="container">
             <div class="row">
                 <div class="txt-bg">
@@ -136,13 +201,15 @@
             </div>
     </section>
     </div>
-    </div>
+    </div> -->
 
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/freelancer.min.js"></script>
     <script src="./js/jquery.easing.min.js"></script>
     <script src="./js/bootstrap-4.0.0.js"></script>
     <script src="./js/popper.min.js"></script>
+    <script src="./dist/js/lightbox-plus-jquery.js"></script>
+    <script src="./dist/js/lightbox.js"></script>
 </body>
 
 </html>
