--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link js-scroll-trigger" href="#home">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link js-scroll-trigger" href="#home" 
+                    style="font-size:20px;color: #767676;">Home 
+                    <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    <a class="nav-link js-scroll-trigger" href="#about"
+                    style="font-size:20px;color: #767676;">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+                    <a class="nav-link js-scroll-trigger" href="#portfolio"
+                    style="font-size:20px;color: #767676;">Portfolio</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#serves">Serves</a>
