--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                         <ul>
                             <li><a href="https://drive.google.com/file/d/1K0_OfzJwsBvohFHq9j1J6KJzJdViswJg/view?usp=drive_link">履歷表</a></li>
                             <li><a href="https://www.instagram.com/chun._/">個人IG</a></li>
-                            <li><a href="https://drive.google.com/file/d/1ySioJA-F3_O9EeWdTp64BkIHHY9kF2P5/view?usp=drive_link">作品集</a></li>
+                            <li><a href="https://online.fliphtml5.com/clfsp/llqm/#p=1">作品集</a></li>
                             <li><a href="https://drive.google.com/drive/folders/10-4jqNkS7QNxoiZ77-DQdbP12aLybfbd?usp=drive_link">攝影作品</a></li>
-                            <li><a href="https://docs.google.com/document/d/1-xWOtTcm7dc-WF-EEoBTx0CNc6U_wfC7SbeXj_e7i8k/edit?usp=drive_link">行銷企劃書</a></li>
+                            <li><a href="https://online.fliphtml5.com/clfsp/puoc/#p=1">行銷企劃書</a></li>
                             <li><a href="https://store.line.me/stickershop/product/26277175/zh-Hant?utm_source=gnsh_stickerDetail">個人LINE貼圖</a></li>
                         </ul>
                     </div>
